--- a/index.html
+++ b/index.html
@@ -6,22 +6,25 @@
     <title>ENAMON.com</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body class="bg-gray-100">
+<body style="background-image: url('https://pbs.twimg.com/media/FpZri2JaMAAAkzk?format=jpg&name=4096x4096'); 
+             background-size: cover; 
+             background-position: center;
+             background-attachment: fixed;">
     <header class="bg-gradient-to-r from-blue-500 to-purple-600 text-white p-6 shadow-md">
-        <div class="container mx-auto flex justify-between items-center">
+        <div class="container mx-auto flex justify-between items-center bg-opacity-80">
             <h1 class="text-3xl font-extrabold tracking-wide">ENAMON.com</h1>
         </div>
     </header>
     
     <main class="container mx-auto mt-10 p-6">
-        <section class="text-center">
+        <section class="text-center bg-white bg-opacity-60 rounded-lg p-8 shadow-lg">
             <h2 class="text-4xl font-extrabold mb-4 bg-clip-text text-transparent bg-gradient-to-r from-blue-500 to-purple-600">Welcome to ENAMON.com</h2>
             <p class="text-lg mb-8 text-gray-700">For those who want to know more about me, press the Get Started button.</p>
             <a href="about.html" class="bg-blue-600 text-white px-8 py-4 rounded-full shadow-lg hover:bg-blue-700 hover:scale-105 transition transform duration-300">Get Started</a>
         </section>
 
         <section id="about" class="mt-16">
-            <div class="bg-white shadow-lg rounded-lg p-8">
+            <div class="bg-white bg-opacity-60 shadow-lg rounded-lg p-8">
                 <h3 class="text-2xl font-bold text-gray-800 mb-4">เพิ่มเติม</h3>
                 <p class="text-gray-600">ถ้าถามว่าสร้างไว้ทำไม พอดีว่าเราอยากหาทำครับผม</p>
             </div>
@@ -36,7 +39,7 @@
     </footer>
 
     <footer class="bg-gray-800 text-white mt-16 py-6">
-        <div class="container mx-auto text-center">
+        <div class="container mx-auto text-center bg-opacity-80">
             <p class="mb-4">Follow me on:</p>
             <div class="flex justify-center space-x-4">
                 <a href="https://www.facebook.com/xe.na.mxn.sud.swy.hma.hlud.cak.pak?locale=th_TH" class="text-blue-400 hover:text-blue-600 transition duration-300">Facebook</a>
@@ -47,4 +50,5 @@
 
 </body>
 </html>
+
 
